--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -1,11 +1,11 @@
-.manual-hght{
+/* .manual-hght{
     padding-top: 2rem;
     height: 520px;
-}
+} */
 
-@media screen and (min-width: 300px) and (max-width: 600px) {
+/* @media screen and (min-width: 300px) and (max-width: 600px) {
     .manual-hght {
         height: 404px;
         padding: 2rem;
     }
-}
+} */
