--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -8,6 +8,14 @@
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
+.flex.cursor-grab.items-center.active\:cursor-grabbing{
+  height:640px;
+}
+ @media screen and (min-width: 300px) and (max-width: 767px) {
+  .flex.cursor-grab.items-center.active\:cursor-grabbing{
+    height:250px;
+  }
+ }
 .text-extra-small {
     font-size: 3rem;
     font-weight: 900;
