--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -127,7 +127,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 20px 0px 0px 20px;
   height: 255px;
   top: -41px;
-  background: rgb(99 102 241);
+  background: #cee1f4;
   right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
 }
@@ -205,6 +205,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   height:86px;
 }
 .autoslide-img p{
+color: #333;
  text-align: center;
  font-size: 14px;
  padding:1rem ;
