--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -147,7 +147,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 0px 0px 20px 20px;
   height: 64px;
   top: -41px;
-  background: rgb(20 184 166 / var(--tw-text-opacity));
+  background: #3f97d2;
   right: 30%; /* Center the title horizontally */
   transform: translateX(50%); /* Center the title horizontally */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -162,7 +162,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
 }
 .card-container {
   width: 300px;
-  background: rgb(99 102 241);
+  background: #cee1f4;
   height: 200px;
   border-radius: 20px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -187,7 +187,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 0px 0px 20px 20px;
   height: 46px;
   top: 0px;
-  background: rgb(20 184 166 / var(--tw-text-opacity));
+  background: #3f97d2;
   right: 65%;
   transform: translateX(50%);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -218,7 +218,7 @@ color: #333;
  text-align: center;
  font-size: 14px;
  padding:1rem ;
- color: #fff;
+ color: #333;
 }
 .form-clr{
   background-color:#4f46e5;
