--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -98,7 +98,7 @@
   margin-left: 2rem;
 }
 .flex.space-x-4 a:hover {
-  background-color: #6366f1;
+  background-color: #3f97d2;
   border-radius: 10px;
 }
 /* Add a bottom line to the list items */
@@ -126,8 +126,8 @@
 }
 
 .custom-img{
- width: 50px;
- height: 50px;
+ width: 60px;
+ height: 55px;
 }
 
 span.logo-text {
