--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -1,6 +1,6 @@
 .custom-count {
     width: 80%;
-    background: rgb(99 102 241);
+    background:#3f97d2;
     color: #fff;
     padding: 5rem;
     border: 1px solid #D4D4D4;
@@ -56,9 +56,14 @@
     font-weight: 700;
 }
 span.colour-text{
-    color:rgb(99 102 241);
+    color:#3f97d2;
 }
-
+.bg-indigo-500{
+background-color: #3f97d2;
+}
+.text-indigo-500{
+color: #3f97d2;
+}
 .carousel-inner {
     height: 538px;
   }
@@ -127,7 +132,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 20px 0px 0px 20px;
   height: 255px;
   top: -41px;
-  background: #cee1f4;
+  background: #3f97d2;
   right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
 }
@@ -147,7 +152,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 0px 0px 20px 20px;
   height: 64px;
   top: -41px;
-  background: #3f97d2;
+  background: #3d7193;
   right: 30%; /* Center the title horizontally */
   transform: translateX(50%); /* Center the title horizontally */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -162,7 +167,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
 }
 .card-container {
   width: 300px;
-  background: #cee1f4;
+  background: #3f97d2;
   height: 200px;
   border-radius: 20px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -187,7 +192,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   border-radius: 0px 0px 20px 20px;
   height: 46px;
   top: 0px;
-  background: #3f97d2;
+  background: #3d7193;
   right: 65%;
   transform: translateX(50%);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
@@ -205,7 +210,7 @@ a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading
   height:86px;
 }
 .autoslide-img p{
-color: #333;
+color: #fff;
  text-align: center;
  font-size: 14px;
  padding:1rem ;
@@ -218,12 +223,24 @@ color: #333;
  text-align: center;
  font-size: 14px;
  padding:1rem ;
- color: #333;
+ color: #fff;
 }
 .form-clr{
-  background-color:#4f46e5;
+  background-color:#3f97d2;
 }
 .notifications-container{
 position: relative;
 top :3rem;
+}
+.form-input-clr{
+background-color:#2f73a1;
+}
+.border-zinc-clr{
+  background-color: #3a4b57;
+}
+.text-teal-500{
+  color:#3f97d2;
+}
+.hover\:bg-teal-500:hover{
+  background-color:#3f97d2;
 }
