--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -422,6 +422,7 @@ background-color:#2f73a1;
 .reg-btn {
   background-image: linear-gradient(73.1deg, #3f97d2 8%, #076eb3 86.9%);
   margin-left: 3px;
+  cursor: pointer;
   color: #fff;
   border-radius: 28px;
   -webkit-transition: .4s;
@@ -477,7 +478,7 @@ background-color:#2f73a1;
   color: #fff;
 }
 
- @media (min-width: 1280px) {
+ @media (min-width: 300px) {
   .container {
       max-width: 1140px;
   }
