--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -9,7 +9,7 @@
 }
 
 .flex.cursor-grab.items-center.active\:cursor-grabbing{
-  height:640px;
+  height:480px;
 }
  @media screen and (min-width: 300px) and (max-width: 767px) {
   .flex.cursor-grab.items-center.active\:cursor-grabbing{
@@ -476,6 +476,26 @@ background-color:#2f73a1;
   background-color: #4a4a4a;
   border-color: #4a4a4a;
   color: #fff;
+}
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.whatsapp-icon {
+  font-size: 30px;
 }
 
  @media (min-width: 300px) {
