--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -502,4 +502,21 @@ background-color:#2f73a1;
   .container {
       max-width: 1140px;
   }
+
+  .whatsapp-float {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    bottom: 10px;
+    right: 10px;
+    background-color: #25d366;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
