--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -115,6 +115,10 @@ color: #3f97d2;
   .row-space{
     padding: 0.7rem;
   }
+  .small-testi img{
+    width: 7rem;
+    height: 5rem;
+  }
   video {
     max-width: 100%;
     height: 500px;
@@ -512,6 +516,53 @@ background-color:#2f73a1;
 
 .whatsapp-icon {
   font-size: 30px;
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.background-image {
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5); /* Adjust the background opacity */
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.overlay-content {
+  max-width: 600px;
+}
+
+.learn-more-btn {
+  display: inline-flex;
+  align-items: center;
+  background-color: #3f97d2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.learn-more-btn svg {
+  margin-left: 8px;
 }
 
  @media (min-width: 300px) {
