--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -603,7 +603,7 @@ background-color:#2f73a1;
   font-weight: 600 !important;
   font-size: 1.25rem;
   margin-bottom: .5rem;
-  background-color: #fff;
+  background-color: transparent;
   padding: 1em;
   display: flex;
   flex-direction: row;
@@ -616,6 +616,18 @@ background-color:#2f73a1;
   font-size: 30px; font-weight: 700;
     line-height: 1.3; 
 }    
+.about-area{
+  background-image: url("../../components/navbar/icons/17cls.png");
+  height: auto;
+  width: 100%;
+  background-position: 50% -133px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  clear: both;
+  display: block;
+  position: relative;
+  padding: 50px 0;
+}
 
  @media (min-width: 300px) {
   .container {
