--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -122,6 +122,7 @@ color: #3f97d2;
   video {
     max-width: 100%;
     height: 500px;
+    object-fit: cover;
 }
 a.text-gray-400.hover\:text-teal-400.duration-300.text-sm.cursor-pointer.leading-6 {
   font-size: 1rem;
@@ -580,6 +581,9 @@ background-color:#2f73a1;
   border: none;
   border-bottom: 1px solid #000;
 }
+.faq-item-heading-1{
+  border: 1px solid #000;
+}
 .faq-item-ans {
   padding: 1em;
   line-height: 1.3;
@@ -596,6 +600,21 @@ background-color:#2f73a1;
   border: none;
 }
 .faq-item-heading {
+  cursor: pointer;
+  font-family: Inter, sans-serif;
+  color: #000;
+  line-height: 1.3;
+  font-weight: 600 !important;
+  font-size: 1.25rem;
+  margin-bottom: .5rem;
+  background-color: transparent;
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.faq-item-heading-1 {
   cursor: pointer;
   font-family: Inter, sans-serif;
   color: #000;
@@ -838,7 +857,22 @@ background-color:#2f73a1;
   color: #ccc; /* disabled option color */
 }
 
-
+.bg-blue-500 {
+  background-color: #3f97d2;
+}
+.bg-blue-500:hover {
+  background-color: #3f97d2;
+}
+.bg-blue-500:active {
+  background-color: #3f97d2;
+}
+.bg-blue-500:focus {
+  background-color: #3f97d2;
+}
+.bg-clr{
+  background-color: #c9d9f3;
+  padding:2rem;
+}
 
  @media (min-width: 300px) {
   .container {
