--- a/client/src/components/landing/index.css
+++ b/client/src/components/landing/index.css
@@ -577,6 +577,10 @@ background-color:#2f73a1;
   width: 70%;
   margin-bottom: 1rem;
 }
+.faq-item-1 {
+  width: 100%;
+  margin-bottom: 1rem;
+}
 .faq-item-heading {
   border: none;
   border-bottom: 1px solid #000;
